<resources>
    <string name="app_name">Concentration</string>
    <string name="concatenation">Concatenation</string>
    <string name="start">Start</string>
    <string name="toggle_music">Toggle Music</string>
    <string name="play">Play</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="end_game">End Game</string>
    <string name="new_game">New Game</string>
    <string name="no_sound">No Sound</string>
    <string name="new_crime">New Crime</string>
    <string name="choose_score_option">choose score option</string>
    <string name="high_scores">High Scores</string>
    <string name="concentration">Concentration</string>
    <string name="refresh">Refresh</string>
    <string name="score">Score:</string>
    <string name="_4">4</string>
    <string name="_8">8</string>
    <string name="_12">12</string>
    <string name="_10">10</string>
    <string name="_14">14</string>
    <string name="_20">20</string>
    <string name="_16">16</string>
    <string name="_18">18</string>
    <string name="choose_a_tile_number">Choose A Tile Number</string>
    <string name="_6">6</string>
    <string name="back_to_main_menu">Back to Main Menu</string>
    <string name="game_over">Game Over!</string>
    <string name="textview">TextView</string>
    <string-array name="dropDown">
        <item>4 tiles</item>
        <item>6 tiles</item>
        <item>8 tiles</item>
        <item>10 tiles</item>
        <item>12 tiles</item>
        <item>14 tiles</item>
        <item>16 tiles</item>
        <item>18 tiles</item>
        <item>20 tiles</item>

    </string-array>
</resources>

