<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#658E38"
    tools:context=".HighScoresActivity">

    <Spinner
        android:id="@+id/mScoreSelect"
        android:layout_width="246dp"
        android:layout_height="48dp"
        android:layout_marginTop="132dp"
        android:contentDescription="@string/choose_score_option"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="234dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mHighScoresTitle">

        <TextView
            android:id="@+id/scoreDisplay1"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/app_name"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/scoreDisplay2"
            android:layout_width="match_parent"
            android:layout_height="97dp"
            android:text="TextView"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/scoreDisplay3"
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:text="TextView"
            android:textColor="#000000" />
    </LinearLayout>

    <TextView
        android:id="@+id/mHighScoresTitle"
        android:layout_width="177dp"
        android:layout_height="73dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="128dp"
        android:text="@string/high_scores"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>